--- a/slideshow/demo3.html
+++ b/slideshow/demo3.html
@@ -44,7 +44,7 @@
           slideshow: 1,			// Slideshow on/off
           autoplay: 1,			// Slideshow starts playing automatically
           start_slide: 1,			// Start slide (0 is random)
-          stop_loop: 0,			// Pauses slideshow on last slide
+          loop: 1,			// Enables moving between the last and first slide.
           random: 0,			// Randomize slide order (Ignores start slide)
           slide_interval: 3000,		// Length between transitions
           transition: 6, 			// 0-None, 1-Fade, 2-Slide Top, 3-Slide Right, 4-Slide Bottom, 5-Slide Left, 6-Carousel Right, 7-Carousel Left
@@ -113,62 +113,13 @@
 </head>
 
   <style type="text/css">
-    body {color:#fff;}
-    .ssControlsContainer {display:none;}
+    body { background:#111;color: #fff; }
   </style>
 
 <body>
   <h1>Demo 3 - supersized jQuery plug-in</h1>
   <p>This page demonstrates invoking a slide show on demand.</p>
   <p><button id="btnSlideShow" value="Start slide show">Start slide show</button></p>
-
-  <div class='ssControlsContainer'>
-    <!--Thumbnail Navigation-->
-    <div id="prevthumb"></div>
-    <div id="nextthumb"></div>
-
-    <!--Arrow Navigation-->
-    <a id="prevslide" class="load-item"></a>
-    <a id="nextslide" class="load-item"></a>
-
-    <div id="thumb-tray" class="load-item">
-      <div id="thumb-back"></div>
-      <div id="thumb-forward"></div>
-    </div>
-
-    <!--Time Bar-->
-    <div id="progress-back" class="load-item">
-      <div id="progress-bar"></div>
-    </div>
-
-    <!--Control Bar-->
-    <div id="controls-wrapper" class="load-item">
-      <div id="controls">
-
-        <a id="play-button">
-          <img id="pauseplay" src="custom-image-path/pause.png" /></a>
-
-        <a id="stop-button">
-          <img src="custom-image-path/stop.png" /></a>
-
-        <!--Slide counter-->
-        <div id="slidecounter">
-          <span class="slidenumber"></span>/ <span class="totalslides"></span>
-        </div>
-
-        <!--Slide captions displayed here-->
-        <div id="slidecaption"></div>
-
-        <!--Thumb Tray button-->
-        <a id="tray-button">
-          <img id="tray-arrow" src="custom-image-path/button-tray-up.png" /></a>
-
-        <!--Navigation-->
-        <ul id="slide-list"></ul>
-
-      </div>
-    </div>
-</div>
 
 </body>
 </html>
