Add on_destroy event and improve DOM hiding
Added on_destory event, which allows callers to execute custom code when
slide show is ended. Fixed bug where initially hidden DOM elements were
incorrectly made visible at conclusion of slide show.

--- a/slideshow/demo4.html
+++ b/slideshow/demo4.html
@@ -132,8 +132,11 @@
           // Theme Options			   
           progress_bar: 1,			// Timer for each slide							
           mouse_scrub: 0,
-          html_template: ssTmpl // The HTML for the controls
-        });
+          html_template: ssTmpl, // The HTML for the controls
+          on_destroy: function () {
+            if (console) console.log('Slide show ended');
+        }
+      });
 
         // Exit slideshow when stop button is clicked.
         $('#stop-button').on('click', function () {
